# bittorrent

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  server.cpp
src/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/cli/: CMakeLists.txt  args.cpp  args.hpp  handler.cpp  handler.hpp  parse_args.cpp  parse_args.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  handshake.cpp  handshake.hpp  peer.cpp  peer.hpp  tracker_request.cpp  tracker_request.hpp  tracker_response.cpp  tracker_response.hpp
src/client/request/: http_request.cpp  http_request.hpp  raw_request.cpp  raw_request.hpp  url.cpp  url.hpp
src/client/utils/: id.cpp  id.hpp  urlencode.cpp  urlencode.hpp
src/server/: tcp_connection.cpp  tcp_connection.hpp  tcp_server.cpp  tcp_server.hpp
src/torrent/: CMakeLists.txt  encoding.cpp  encoding.hpp  pieces.cpp  pieces.hpp  torrent.cpp  torrent.hpp
src/torrent/bencoding/: bencoding.cpp  bencoding.hpp  decode.cpp  encode.cpp
src/tracker/: CMakeLists.txt  client.cpp  peer.cpp  peer.hpp  request.cpp  response.cpp  tracker_request.cpp  tracker_request.hpp  tracker_response.cpp  tracker_response.hpp
src/tracker/http_request/: http_request.cpp  http_request.hpp
src/tracker/utils/: id.cpp  id.hpp  urlencode.cpp  urlencode.hpp
src/utils/: CMakeLists.txt  file.cpp  file.hpp  file_io.cpp  logging.cpp  logging.hpp  sha.cpp  sha.hpp  split.cpp  str.cpp  str.hpp  utils.hpp
src/utils/bencoding/: bencoding.cpp  bencoding.hpp  decode.cpp  encode.cpp
test/: CMakeLists.txt  main.cpp  read_fixture.cpp  read_fixture.hpp
test/e2e/: main.py
test/fixtures/: sample  sample.torrent  sample16M.torrent  sample_odd_blocks.torrent
test/src/: test_decode.cpp  test_encoding.cpp  test_torrent.cpp
test/src/tracker/: test_peer.cpp  test_request.cpp  test_response.cpp  test_url.cpp
test/src/utils/: test_file.cpp  test_str.cpp
test/src/utils/bencoding/: test_encode.cpp
test/unit/: CMakeLists.txt
test/unit/client/: test_handshake.cpp  test_peer.cpp  test_tracker_request.cpp  test_tracker_response.cpp  test_url.cpp
test/unit/torrent/: test_pieces.cpp  test_torrent.cpp
test/unit/utils/: test_file.cpp
test/unit/utils/bencoding/: test_decode.cpp
